# open-llama

./: .gitignore  DOCUMENTATION.md  LICENSE  Makefile  PLAN.md  README.md  go.mod  package-lock.json  pyproject.toml
assets/server/: README.md
cmd/openllama/: main.go
configs/: default.json
docs/: CONFIG.md  TEMPLATES.md  USAGE.md
internal/app/: app.go  app_test.go
internal/chat/: engine.go  engine_test.go  message.go  stream.go
internal/config/: config.go  config_test.go  loader.go  paths.go
internal/context/: manager.go  manager_test.go  tokenizer.go
internal/hardware/: detect.go  detect_darwin.go  detect_linux.go  detect_test.go  detect_windows.go
internal/metrics/: collector.go  collector_test.go
internal/models/: info.go  scanner.go  scanner_test.go
internal/server/: embed.go  port.go  server.go  server_test.go
internal/templates/: builtin.go  engine.go  engine_test.go  types.go
internal/ui/: keymap.go  messages.go  model.go  styles.go  update.go  view.go
internal/utils/: fs.go  logger.go
scripts/: build.sh  download-server.sh
src/open_llama/: __init__.py  app.py  main.py  ollama_client.py
