[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-llama"
version = "0.1.0"
description = "A TUI-based Ollama alternative — fast, no extra pain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "textual>=0.52.0",
    "httpx>=0.27.0",
]

[project.scripts]
open-llama = "open_llama.main:main"

[tool.setuptools.packages.find]
where = ["src"]
